proj1/tests/other-tests/minz-tests/error/fn_star.py
def with_kwargs(**x):
    return x

def with_args(*x):
    return x